# hype-chat

./: Cargo.toml  README.md
examples/: client.rs
src/: commands.rs  lib.rs  main.rs  messages.rs  numerics.rs  user.rs
src/client/: main.rs
src/server/: main.rs
