[package]
name = "hype-chat"
version = "0.1.0"
edition = "2021"

[lib]
name = "libirc"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
